--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a class="text-white px-3" href="">
@@ -248,7 +248,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                         </div>
                         <div class="service-item">
                             <div class="service-img mx-auto">
-                                <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/air4.jpg" style="object-fit: cover;">
+                                <img class="rounded-circle w-100 h-100 bg-light p-3" src="img/air5.jpg" style="object-fit: cover;">
                             </div>
                             <div class="position-relative text-center bg-light rounded p-4 pb-5" style="margin-top: -75px;">
                                 <h5 class="font-weight-semi-bold mt-5 mb-3 pt-5">Innovative</h5>
@@ -309,7 +309,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
             </div>
             <div class="col-lg-4 col-md-6 p-0 portfolio-item">
                 <div class="position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/air4.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/air5.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 p-0 portfolio-item">
@@ -375,7 +375,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                                 <h4 class="font-weight-bold text-white mb-0">60/-</h4>
                             </div>
                             <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
-                                <img class="rounded-circle w-100 h-100" src="img/air4.jpg" style="object-fit: cover;">
+                                <img class="rounded-circle w-100 h-100" src="img/air5.jpg" style="object-fit: cover;">
                             </div>
                             <h5 class="font-weight-bold mb-4">Strawberry pops<br>  (6 in a pack)</h5>
                              <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-primary py-md-3 px-md-5 mt-2">Order Now</a>
@@ -474,7 +474,7 @@ We source only the ethically sourced, sustainable chocolate to create luxury cho
                 </div>
                 <div class="col-12 mb-4">
                     <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
                 </div>
