--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a class="text-white px-3" href="">
@@ -162,7 +162,7 @@
                             <h4 class="font-weight-bold text-white mb-0">60/-</h4>
                         </div>
                         <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
-                            <img class="rounded-circle w-100 h-100" src="img/air4.jpg" style="object-fit: cover;">
+                            <img class="rounded-circle w-100 h-100" src="img/air5.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Strawberry pops<br>  (6 in a pack)</h5>
                          <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-primary py-md-3 px-md-5 mt-2">Order Now</a>
@@ -198,7 +198,7 @@
                             <h4 class="font-weight-bold text-white mb-0">80/-</h4>
                         </div>
                         <div class="position-relative bg-primary rounded-circle mt-n3 mb-4 p-3" style="width: 150px; height: 150px;">
-                            <img class="rounded-circle w-100 h-100" src="img/rose.jpg" style="object-fit: cover;">
+                            <img class="rounded-circle w-100 h-100" src="img/rose1.jpg" style="object-fit: cover;">
                         </div>
                         <h5 class="font-weight-bold mb-4">Rose Candy<br>(1 in a pack)<br> &hearts;</h5>
                          <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-primary py-md-3 px-md-5 mt-2">Order Now</a>
@@ -237,7 +237,7 @@
                 </div>
                 <div class="col-12 mb-4">
                     <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
                 </div>
