--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                         <a class="text-white px-3" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="https://x.com/BellsCocoa89174">
+                        <a class="text-white px-3" href="">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a class="text-white px-3" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
@@ -78,7 +78,7 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link active">About</a>
+                        <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="product.html" class="nav-item nav-link">Product</a>
                     </div>
                     <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
@@ -87,7 +87,7 @@
                     <div class="navbar-nav mr-auto py-0">
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                 </div>
             </nav>
@@ -99,74 +99,59 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid page-header" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
-            <h1 class="text-white display-3 mt-lg-5">About</h1>
+            <h1 class="text-white display-3 mt-lg-5">Contact</h1>
             <div class="d-inline-flex align-items-center text-white">
                 <p class="m-0"><a class="text-white" href="">Home</a></p>
                 <i class="fa fa-circle px-3"></i>
-                <p class="m-0">About</p>
+                <p class="m-0">Contact</p>
             </div>
         </div>
     </div>
     <!-- Header End -->
 
 
-    <!-- About Start -->
+    <!-- Contact Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row justify-content-center">
-                <div class="col-lg-7">
-                    <h1 class="section-title position-relative text-center mb-5">Delicious Chocolate's <br> Made With Love</h1>
+                <div class="col-lg-6">
+                    <h1 class="section-title position-relative text-center mb-5">Contact Us For Any Query</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 py-5">
-                    <h4 class="font-weight-bold mb-3">About Us</h4>
-                    <h5 class="text-muted mb-3">Unwrap the happiness and discover your new favorite chocolate today, Treat yourself to a moment of pure indulgence with our handcrafted chocolates.</h5>
-                    <p>A heaven for chocolate lovers, Where happiness comes in bite-sized pieces. Experience the unconventional with our unique chocolate creations, using exotic ingredients and unexpected flavor combinations. We source only the ethically sourced, sustainable chocolate to create luxury chocolates you can feel good about indulging in.</p>
-                    <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-secondary mt-2">Learn More</a>
-                </div>
-                <div class="col-lg-4" style="min-height: 400px;">
-                    <div class="position-relative h-100 rounded overflow-hidden">
-                        <img class="position-absolute w-100 h-100" src="img/rose2.jpg" style="object-fit: cover;">
+            <div class="row justify-content-center">
+                <div class="col-lg-9">
+                    <div class="contact-form bg-light rounded p-5">
+                        <div id="success"></div>
+                        <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                            <div class="form-row">
+                                <div class="col-sm-6 control-group">
+                                    <input type="text" class="form-control p-4" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                <div class="col-sm-6 control-group">
+                                    <input type="email" class="form-control p-4" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                            </div>
+                            <div class="control-group">
+                                <input type="text" class="form-control p-4" id="subject" placeholder="Subject" required="required" data-validation-required-message="Please enter a subject" />
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div class="control-group">
+                                <textarea class="form-control p-4" rows="6" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+                                <p class="help-block text-danger"></p>
+                            </div>
+                            <div>
+                                 <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" 
+                          class="btn btn-primary py-md-3 px-md-5 mt-2">Send Message</a>
+                            </div>
+                        </form>
                     </div>
-                </div>
-                <div class="col-lg-4 py-5">
-                    <h4 class="font-weight-bold mb-3">Our Features</h4>
-                    <p>Impress your loved ones with a decadent gift from our exquisite chocolate collection.</p>
-                    <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Customized Packaging</h5>
-                    <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Exotic Flavors</h5>
-                    <h5 class="text-muted mb-3"><i class="fa fa-check text-secondary mr-3"></i>Luxury Chocolates</h5>
-                    <a href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv" class="btn btn-primary mt-2">Learn More</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
-
-
-    <!-- Team Start -->
-   <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row">
-                <div class="col-lg-6">
-                    <h1 class="section-title position-relative mb">Made With Love For Your Loved Ones's</h1>
-                </div>
-            <div class="row">
-                        <div class="team-item">
-                            <div class="team-img mx-auto">
-                                <img class="rounded-circle w-100 h-100" src="img/air12.jpg" style="object-fit: cover;">
-                            </div>
-                            <div class="position-relative text-center bg-light rounded px-4 py-5" style="margin-top: -100px;">
-                                <h2 class="font-weight-bold mt-5 mb pt-5"><i>Our Business Specializes In Customizing Orders To Meet Your Unique Needs With Us.<br> We Are Here To Bring Your Vision To Life.</i></h2>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        </div>
-                    </div>
-                </div>
-            </div>
-    <!-- Team End -->
+    <!-- Contact End -->
 
 
     <!-- Footer Start -->
@@ -179,7 +164,7 @@
                     </a>
                 </div>
                 <div class="col-12 mb-4">
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://x.com/BellsCocoa89174"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
@@ -230,3 +215,4 @@
 </body>
 
 </html>
+ 
