--- a/service.html
+++ b/service.html
@@ -42,10 +42,10 @@
                 </div>
                 <div class="col-md-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-white px-3" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events">
+                        <a class="text-white px-3" href="https://www.facebook.com/share/3uWHRp6JKtBA3Msg/?mibextid=qi2Omg">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-white px-3" href="">
+                        <a class="text-white px-3" href="https://x.com/cocoa_bells0?t=ml_snDo1qxSEKJoyTlM1XQ&s=09">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a class="text-white px-3" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
@@ -53,9 +53,6 @@
                         </a>
                         <a class="text-white px-3" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv">
                             <i class="fab fa-instagram"></i>
-                        </a>
-                        <a class="text-white pl-3" href="">
-                            <i class="fab fa-youtube"></i>
                         </a>
                     </div>
                 </div>
@@ -220,8 +217,8 @@
                     </a>
                 </div>
                 <div class="col-12 mb-4">
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/profile.php?id=61560026258508&sk=about_life_events"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://x.com/cocoa_bells0?t=ml_snDo1qxSEKJoyTlM1XQ&s=09"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.facebook.com/share/3uWHRp6JKtBA3Msg/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-outline-secondary btn-social mr-2" href="https://www.linkedin.com/in/saira-siddiq-1a0a7825b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-secondary btn-social" href="https://www.instagram.com/cocoabells_?igsh=MjY2YzNqanFwcHRv"><i class="fab fa-instagram"></i></a>
                 </div>
