--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>Cocoa bell's - Chocolate Shop Website </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
     
 
     <!-- Favicon -->
@@ -100,7 +98,7 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/bag1.png" alt="Image">
+                    <img class="w-100" src="img/air7.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Yummy & Delicious</h4>
@@ -110,7 +108,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/bag2.png" alt="Image">
+                    <img class="w-100" src="img/air6.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Yummy & Delicious</h4>
