--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Cocoa bell's - Chocolate Shop Website</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  
+   
     <!-- Favicon -->
     <link href="img/air12.jpg" rel="icon">
 
@@ -185,7 +185,7 @@
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">The chocolates were beautifully packaged and arrived fresh and delicious. I highly recommend this shop!</h4>
+                            <h4 class="font-weight-light mb-4">The chocolates were beautifully packed, arrived fresh, and tasted delicious. I highly recommend this shop!</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/2.jpg" alt="">
                             <h5 class="font-weight-bold m-0">Haniya</h5>
                             <span>Undergrad Software Engineer</span>
